--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,6 +26,43 @@ body {
     color: var(--font-secundary);
     font-size: 16px;
 }
+.navbar{
+    position: sticky;
+    width: 100%;
+    height: 25px;
+    z-index: 1000;
+    background-color: var(--main-color);
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+}
+
+.ul--navbar{
+    display: none;
+    position: absolute;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: flex-end;
+    background-color: var(--main-color);
+    opacity: 1;
+    padding-right: 3rem;
+    width: 100%;
+    height: 100vh;
+    column-gap: 1rem;
+    top: 26px;
+}
+li{
+    text-decoration: none;
+    list-style: none;
+    font-size: 18px;
+}
+li a{
+    text-decoration: none;
+    color: var(--font-secundary);
+}
+.goo{
+    display: flex;
+}
 .contenedor-principal{
     display: grid;
     grid-template-areas:
@@ -49,14 +86,14 @@ body {
 }
 .contenedor-perfil {
     position: absolute;
-    width: 70%;
+    width: 60%;
     height: 70%;
     z-index: 0;
     background-color: var(--primary);
     border-radius: 50%;
     top: 40px;
-    right: 15%;
-    background-image: url(../images/perfil.png);
+    right: 20%;
+    background-image: url(../íconos/milton.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: contain;
@@ -130,6 +167,7 @@ body {
 }
 .redes {
     background-color: var(--secundary);
+    border: none;
     width: 28px;
     height: 28px;
     border-radius: 50%;
@@ -249,12 +287,22 @@ body {
 }
 
 .skills-progress {
-    width: 80%;
     height: 8px;
     background-color: var(--font-primary);
     border-radius: 3px;
 }
-
+.skills-bar-75 .skills-progress{
+    width: 75%;
+}
+.skills-bar-80 .skills-progress{
+    width: 80%;
+}
+.skills-bar-60 .skills-progress{
+    width: 60%;
+}
+.skills-bar-30 .skills-progress{
+    width: 30%;
+}
 .subsection.mi-portafolio {
     width: 100%;
 }
@@ -299,4 +347,145 @@ body {
 .subcontenedor.footer {
     background-color: var(--primary);
     min-height: 100px;
+    font-size: 16px;
+    text-align: center;
+}
+
+@media screen and (min-width: 381px) {
+    :root{
+        --titulo-size:54px;
+        --subtitulo-size: 32px;
+        --subsection-size: 22px;
+    } 
+    .subsection >p{
+        text-align: center;
+        font-weight: 400;
+        font-size: 18px;
+    }
+    .body{
+        font-size: 22px;
+    }
+    .slider-servicios h2 {
+        font-size: 28px;
+    }
+    .slider-servicios p {
+        font-size: 22px;
+    }
+    .redes {
+        width: 40px;
+        height: 40px;
+        background-size: 29px 29px;
+    }
+    .subcontenedor {
+        min-height: 500px;
+        min-width: 350px;
+        max-width: 671px;
+    }
+    .slider-servicios li {
+        height: 350px;
+    }
+
+    .skill-card h2{
+        text-align: center;
+    }
+    .skills-item{
+        padding: 0.3em 0;
+    }
+    .skills-bar {
+        width: 300px;
+        height: 12px;
+        border-radius: 5px;
+    }
+    
+    .skills-progress {
+        height: 12px;
+        border-radius: 5px;
+    }
+}
+@media screen and (min-width: 678px) {
+    .navbar .logo{
+        display:none
+    }
+    .navbar ul{
+        display: flex;
+        position: relative;
+        width: auto;
+        height: auto;
+        top: 0;
+        flex-direction: row;
+        column-gap: 1rem;
+        padding-right: 0;
+    }
+    li{
+        font-size: 14px;
+    }
+
+    :root{
+        --titulo-size:90px;
+        --subtitulo-size: 54px;
+        --subsection-size: 32px;
+    } 
+    .subsection >p{
+        text-align: center;
+        font-weight: 400;
+        font-size: 18px;
+    }
+    .body{
+        font-size: 22px;
+    }
+    .slider-servicios h2 {
+        font-size: 28px;
+    }
+    .slider-servicios p {
+        font-size: 22px;
+    }
+    .redes {
+        width: 60px;
+        height: 60px;
+        background-size: 40px 40px;
+    }
+    .subcontenedor {
+        min-height: 90vh;
+        min-width: 350px;
+        max-width: 1000px;
+    }
+    .slider-servicios li {
+        height: 450px;
+    }
+    .contenedor-principal{
+        padding: 0 5vw;
+    }
+    .contenedor-referencias {
+        max-width: 150px;
+    }
+    .skills-bar {
+        width: 450px;
+        height: 15px;
+        border-radius: 7px;
+    }
+    
+    .skills-progress {
+        height: 15px;
+        border-radius: 7px;
+    }
+}
+
+@media screen and (min-width: 1001px) {
+    :root{
+        --titulo-size:110px;
+    } 
+    .contenedor-principal{
+        padding: 0 15%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .acerca-de-mi p{
+        font-size: 22px;
+    }
+    .slider-servicios li {
+        height: 500px;
+    }
+    body{
+        padding: 0 auto;
+    }
 }
